src/test/ui/loops/loop-no-implicit-break.rs
fn main() {
    let x: i8 = loop {
        10 //~ ERROR mismatched types
    };
}
